correction overlap images/menu + nettoyage code

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ border-bottom: none;
 
 header.active {
   background-color: #fff;
+  z-index: 1;
 }
 
 header.active a {
@@ -260,13 +261,13 @@ header .color {
   padding: 10px;
 }
 
-#team-members .box img {
+#team-members img {
   width: 180px;
   border: 7px solid #fff;
   border-radius: 50%!important;
 }
 
-#team-members .box:hover img {
+#team-members img:hover {
   opacity: 0.5;
   transform: translate(-1%, -1%);
   transition: .5s ease;
@@ -277,7 +278,6 @@ header .color {
   margin-top: -20px;
   color: #868e96!important;
 }
-
 
 
 /* footer */
@@ -316,92 +316,3 @@ footer {
   .btn-primary:active, .btn-primary:focus {
     box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important; }
 
-
-/*
-{
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../img/rucola-salad-plant-leaf.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  }
-
-.main-nav {
-  float: right;
-  list-style: none;
-  margin-top: 30px;
-}
-
-.main-nav li {
-  display: inline-block;
-}
-
-.main-nav li a {
-  color: white;
-  text-decoration: none;
-  padding: 5px 20px;
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-}
-
-.main-nav li a:hover {
-  border: 1px solid white;
-}
-
-.logo {
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 40px;
-  float: left;
-  margin-top: 15px
-}
-
-.body {
-  font-family: monospace;
-}
-
-.row {
-  max-width: 1200px;
-  margin: auto;
-}
-
-.title {
-  position: absolute;
-  width: 1200px;
-  margin-left: 0;
-  margin-top: 0;
-  font-family: "Roboto", sans-serif;
-}
-
-h1 {
-  color: white;
-  text-transform: uppercase;
-  font-size: 70px;
-  text-align: center;
-  margin-top: 275px;
-}
-
-.button {
-  margin-top: 30px;
-  margin-left: 440px;
-}
-
-.btn {
-  border: 1px solid white;
-  padding: 10px 30px;
-  color: white;
-  text-decoration: none;
-  margin-right: 5px;
-  font-size: 13px;
-  text-transform: uppercase;
-  font-family: "Roboto" sans-serif;
-}
-
-.btn:hover {
-  background-color: lightgreen;
-  transition: all 0.2s ease-in;
-}
